--- a/docs/stylesheets/temporary.css
+++ b/docs/stylesheets/temporary.css
@@ -1,11 +1,15 @@
-/*  This file only exists (temporarily) until the
-    custom styling can be replaced with the
-    implementation of the upstream project.
-*/
-
 blockquote {
     padding: 0 20px;
     margin: 0 0 20px;
     font-size: inherit;
     border-left: 5px solid #eee;
+}
+
+article p img {
+    display: block;
+    margin: 0 auto;
+}
+
+.article code {
+    background-color: transparent;
 }
